Added contact Form. Fixed favicon. Changed 'art' to Contact. Updated About.

--- a/content/projects/mtCharelston9-3-22/index.mdx
+++ b/content/projects/mtCharelston9-3-22/index.mdx
@@ -8,4 +8,4 @@ cover: "./IMG_3303.jpeg"
 date: "2022-9-03"
 ---
 
-Words Here
+A fun day trip to Mt. Charelston with a group of friends! We had a picnic and took some great pictures of our cars.
