added Social media links; added to about me

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,3 +5,20 @@ cover: "./IMG_3023.jpeg"
 ---
 
 # About Me!
+
+Hi! My name is Ethan Aldrich. I am a lover of all things Motorsports, Photography, and Computer related. I work in IT and do small photography and automotive jobs as hobbies. I created this site as a way to showcase, and moreso show off, the pictures I take! 
+
+
+### Social Media Links
+[![alt text][1.1]][1] [![alt text][2.1]][2] [![alt text][3.1]][3]
+
+
+
+
+[1.1]: https://cdn-icons-png.flaticon.com/64/2111/2111463.png (Instagram icon with padding)
+[2.1]: https://cdn-icons-png.flaticon.com/64/3291/3291695.png (Github icon with padding)
+[3.1]: https://cdn-icons-png.flaticon.com/64/5968/5968454.png (Adobe Stock icon with padding)
+
+[1]: https://www.instagram.com/ethans.ig.acct/
+[2]: https://github.com/0x000NULL
+[3]: https://stock.adobe.com/contributor/211074694/Ethan%20Aldrich
